--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,10 @@
   "keywords": ["php link", "link shortener", "url shortener"],
   "require": {
     "php": ">=7.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Sharasolns\\LinkShortener\\": "src/"
+    }
   }
 }
